--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
-    "mysql2": "^1.6.5",
-    "sequelize": "^5.8.6"
+    "mysql2": "^1.7.0",
+    "sequelize": "^5.18.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -26,5 +26,17 @@
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "prettier": "^1.17.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/svk192/Project-2.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/svk192/Project-2/issues"
+  },
+  "homepage": "https://github.com/svk192/Project-2#readme"
 }
