--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "iethsfcpf4t1f71j",
-    "password": "rl0xkrnnyj15rcw4",
-    "database": "hnte13n5llvu9ote",
-    "host": "ol5tz0yvwp930510.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "root",
+    "password": "",
+    "database": "Book_wars",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
