--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.16.2",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.18.4"
   },
   "devDependencies": {
