--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
@@ -18,6 +22,7 @@
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "router": "^1.3.3",
     "sequelize": "^5.18.4"
   },
   "devDependencies": {
