--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
