--- a/package.json
+++ b/package.json
@@ -1,48 +1,37 @@
 {
   "name": "project-2",
   "version": "1.0.0",
-  "description": "Project 2 Starter",
+  "description": "",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "lint": "eslint --quiet .",
-    "fix": "eslint --fix .",
-    "test": "npm run lint && cross-env NODE_ENV=test mocha -u bdd --reporter spec --exit"
+  "directories": {
+    "test": "test"
   },
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
-    "bcrypt-nodejs": "0.0.3",
-    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
-    "dotenv": "^8.0.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
+    "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "router": "^1.3.3",
     "sequelize": "^5.18.4"
   },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "mocha": "^6.1.4",
-    "prettier": "^1.17.1"
-  },
-  "directories": {
-    "test": "test"
+  "devDependencies": {},
+  "scripts": {
+    "test": "mocha",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/svk192/Project-2.git"
   },
-  "author": "",
+  "author": "Neha",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/svk192/Project-2/issues"
   },
