--- a/package.json
+++ b/package.json
@@ -6,36 +6,33 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "bcrypt": "^3.0.6",
-    "body-parser": "^1.19.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.4",
-    "axios": "^0.19.0",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "express-session": "^1.16.2",
-    "mysql": "^2.17.1",
-    "mysql2": "^1.7.0",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "router": "^1.3.3",
-    "sequelize": "^5.18.4"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "mocha",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/svk192/Project-2.git"
   },
-  "author": "Neha",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/svk192/Project-2/issues"
   },
-  "homepage": "https://github.com/svk192/Project-2#readme"
+  "homepage": "https://github.com/svk192/Project-2#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
+    "fs": "0.0.1-security",
+    "mysql": "^2.17.1",
+    "mysql2": "^1.7.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "sequelize": "^5.18.4"
+  },
+  "devDependencies": {}
 }
